# TrPlayer

./: .gitignore  CMakeLists.txt  Makefile  README.md
lbs/MusicLib/: MusicLib.cpp  MusicLib.h
libs/MusicLib/: MusicLib.cpp  MusicLib.h
libs/Tocar/: Tocar.c  Tocar.h
libs/Verificar/: Verificar.c  Verificar.h
src/: main.c  main.cpp
